@@ -2,6 +2,8 @@
   - Catch FOP failing. BZ #661551
   - Update Changes file. BZ #661568
   - Cleaned up README file.
+  - Catch empty tags that break packaging. (abstract, subtitle)
+  - Add rpmlint check for mock builds.
   - corrected document conventions text. BZ#651616
 
 2.5  Fri Dec 02 2010 
